examples/qasm/syntax_errors/e7.qasm
// int instead of an id in a cx
cx b, 1;


